# pepper

./: .gitignore  .pepper  Cargo.toml  README.md  _config.yml  build.rs  cbindgen.toml  linux.pepper  pepper_plugin_api.h  project.ini  project.pp  test.refs  todo.txt  windows.pepper  
.github/: FUNDING.yml
.github/screenshots/: README.md
.github/workflows/: rust.yml
_layouts/: default.html
docs/: README.md
docs/modes/: README.md
docs/recipes/: README.md
docs/scripting/: README.md
docs/syntax/: README.md
lib/: Cargo.toml  application.rs  buffer.rs  buffer_position.rs  buffer_view.rs  client.rs  client_event.rs  command.rs  config.rs  connection.rs  cursor.rs  editor.rs  editor_event.rs  editor_utils.rs  events.rs  glob.rs  history.rs  json.rs  keymap.rs  lib.rs  lsp.rs  macros.rs  mode.rs  navigation_history.rs  pattern.rs  picker.rs  platform.rs  register.rs  script.rs  script_bindings.rs  serialization.rs  syntax.rs  theme.rs  ui.rs  word_database.rs
lib/command/: builtin.rs
lib/lsp/: client.rs  protocol.rs
lib/mode/: command.rs  insert.rs  normal.rs  picker.rs  read_line.rs  script.rs
lib/platform/: windows.rs
mine/: Cargo.toml
mine/src/: main.rs
my/: Cargo.toml
my/src/: main.rs
pepper/: Cargo.toml
pepper/examples/: vanilla.rs
pepper/rc/: bindings.md  changelog.md  command_reference.md  config_recipes.md  default_aliases.pp  default_bindings.pepper  default_bindings.pp  default_bsd.pepper  default_commands.pepper  default_config.pp  default_configs.pepper  default_linux.pepper  default_linux.pp  default_macos.pepper  default_syntaxes.pepper  default_syntaxes.pp  default_windows.pepper  default_windows.pp  expansion_reference.md  help.md  language_syntax_definitions.md
pepper/src/: application.rs  buffer.rs  buffer_history.rs  buffer_position.rs  buffer_view.rs  client.rs  command.rs  config.rs  cursor.rs  editor.rs  editor_utils.rs  events.rs  glob.rs  help.rs  history.rs  keymap.rs  lib.rs  lsp.rs  mode.rs  navigation_history.rs  pattern.rs  picker.rs  platform.rs  plugin.rs  serialization.rs  syntax.rs  theme.rs  ui.rs  word_database.rs
pepper/src/command/: builtin.rs  builtins.rs  expansions.rs
pepper/src/lsp/: client.rs
pepper/src/mode/: command.rs  insert.rs  normal.rs  picker.rs  read_line.rs  readline.rs
plugin-lsp/: Cargo.toml  README.md
plugin-lsp/rc/: default_bindings.pepper  help.md
plugin-lsp/src/: capabilities.rs  client.rs  client_event_handler.rs  command.rs  json.rs  lib.rs  main.rs  mode.rs  protocol.rs
plugin-lsp/src/mode/: picker.rs  read_line.rs  readline.rs
plugin-remedybg/: Cargo.toml
plugin-remedybg/rc/: help.md
plugin-remedybg/src/: lib.rs  protocol.rs
plugin-unreal/: Cargo.toml
plugin-unreal/rc/: default_bindings.pepper
plugin-unreal/src/: command.rs  lib.rs
rc/: bindings.md  command_reference.md  config_recipes.md  default_config.ini  default_config.pp  help.md  index.md  language_syntax_definitions.md
src/: application.rs  buffer.rs  buffer_position.rs  buffer_view.rs  client.rs  client_event.rs  command.rs  command_next.rs  config.rs  connection.rs  cursor.rs  custom_view.rs  default_config.pp  editor.rs  editor_event.rs  editor_operation.rs  editor_utils.rs  event.rs  event_manager.rs  events.rs  ffi.rs  glob.rs  help.rs  history.rs  ini.rs  json.rs  keymap.rs  lib.rs  lsp.rs  macros.rs  main.rs  mode.rs  navigation_history.rs  pattern.rs  picker.rs  platform.rs  plugin.rs  register.rs  script.rs  script_bindings.rs  (+12 more)
src/command/: builtin.rs
src/lsp/: capabilities.rs  client.rs  protocol.rs
src/mode/: command.rs  goto.rs  insert.rs  normal.rs  picker.rs  read_line.rs  script.rs  script_picker.rs  script_read_line.rs  search.rs  select.rs
src/platform/: windows.rs
src/plugin/: api.rs  api_impl.rs
src/ui/: none_ui.rs  tui.rs
web/: Cargo.toml  README.md  index.html  index.js  pepper_web.wasm  style.css  xterm.js
web/pkg/: pepper_web.js  pepper_web_bg.wasm
web/src/: lib.rs
web/xtermjs/: xterm-addon-webgl.js  xterm.js
win/: Cargo.toml  main.rs
