[package]
name = "pepper"
version = "0.5.7"
authors = ["Matheus Lessa <vamolessa@mm.st>"]
edition = "2018"
description = "An opinionated modal editor to simplify code editing from the terminal"
license = "GPL-3.0"

documentation = "https://github.com/vamolessa/pepper/wiki"
homepage = "https://vamolessa.github.io/pepper"
repository = "https://github.com/vamolessa/pepper"
readme = "README.md"
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "pepper"
path = "src/main.rs"

[dependencies]
ctrlc = "3.1"
crossterm = "0.18"
argh = "0.1"
polling = "2.0"
mlua = { version = "0.4", features = [ "vendored", "lua54" ] }
fuzzy-matcher = "0.3"
copypasta = "0.7"

[target.'cfg(windows)'.dependencies]
uds_windows = "0.1"
