[package]
name = "pepper"
version = "0.6.0"
authors = ["Matheus Lessa"]
edition = "2018"
description = "An opinionated modal editor to simplify code editing from the terminal"
license = "GPL-3.0"
resolver = "2"

documentation = "https://github.com/vamolessa/pepper/wiki"
homepage = "https://vamolessa.github.io/pepper"
repository = "https://github.com/vamolessa/pepper"
readme = "../README.md"
categories = ["command-line-utilities", "text-editors"]

[lib]
name = "pepper"
path = "lib/lib.rs"

[[bin]]
name = "pepper"
path = "bin/main.rs"

[dependencies]
argh = "0.1"
fuzzy-matcher = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winerror", "winuser", "errhandlingapi", "stringapiset", "winnls", "consoleapi", "processenv", "handleapi", "synchapi", "ioapiset", "namedpipeapi"] }
