[package]
name = "pepper-plugin-lsp"
version = "0.6.4"
authors = ["Matheus Lessa"]
edition = "2021"
description = "Language Server Protocol plugin for Pepper editor"
license = "GPL-3.0"

documentation = "https://vamolessa.github.io/pepper/plugin-lsp/rc/help"
homepage = "https://vamolessa.github.io/pepper"
repository = "https://github.com/vamolessa/pepper"
readme = "README.md"
categories = ["command-line-utilities", "text-editors"]

[lib]
name = "pepper_plugin_lsp"
path = "src/lib.rs"

[[bin]]
name = "pepper"
path = "src/main.rs"

[dependencies]
pepper = { path = "../pepper", version = "0.18" }
