[package]
name = "pepper-plugin-unreal"
version = "0.1.0"
authors = ["Matheus Lessa"]
edition = "2021"
description = "Unreal Engine integration plugin for Pepper editor"
license = "GPL-3.0"

documentation = "https://vamolessa.github.io/pepper/plugin-unreal/rc/help"
homepage = "https://vamolessa.github.io/pepper"
repository = "https://github.com/vamolessa/pepper"
readme = "../README.md"
categories = ["command-line-utilities", "text-editors"]

[lib]
name = "pepper_plugin_unreal"
path = "src/lib.rs"

[dependencies]
pepper = { path = "../pepper", version = "0" }
