[package]
name = "pepper-web"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "pepper_web"
path = "src/lib.rs"

[dependencies]
pepper = { path = "../pepper" }

[profile.release]
strip = true
incremental = false
lto = "on"

[profile.dev]
debug = true
incremental = true
lto = "off"
